fix css styale to show the canvas

--- a/INDEX1.html
+++ b/INDEX1.html
@@ -207,7 +207,7 @@
     <div id="canvas-wrapper">
         <div id="canvas-container"></div>
 
-        <div id="video-container">
+        <div id="video-container" style="display: none;">
             <video id="input-video" autoplay playsinline muted></video>
             <canvas id="skeleton-canvas"></canvas>
         </div>
