--- a/INDEX1.html
+++ b/INDEX1.html
@@ -35,8 +35,10 @@
             position: absolute;
             top: 20px;
             right: 20px;
-            width: 160px;
-            height: 120px;
+            /* width: 160px;
+            height: 120px; */
+            width: 1px;
+            height: 1px;
             z-index: 2;
             border: 2px solid rgba(255, 255, 255, 0.3);
             border-radius: 8px;
